<resources>
    <string name="app_name">NMedia</string>
    <string name="HelloMessage">NMedia!</string>
    <string name="author">Netology. University of Internet Professions of the Future</string>
    <string name="published">21 may 18:36</string>
    <string name="content">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остается с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="likeCount" translatable="false">10</string>
    <string name="shareCount" translatable="false">2</string>
    <string name="viewsCount" translatable="false">5</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post content</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_topic">Edit content</string>
    <string name="ic_like_description">Like</string>
    <string name="ic_share_description">Share</string>
    <string name="ic_views_description">Views</string>
    <string name="ic_more_description">Options post</string>
    <string name="chooser_share_post">Share</string>
    <string name="play_video">Play video</string>
    <string name="add_post">Add post</string>
    <string name="preview_video">Preview video</string>
    <string name="googleApiCheck">NMedia won\'t run without Google Play services, which are not supported by your device</string>
    <string name="channel_remote_name">Channel name</string>
    <string name="channel_remote_description">Channel description</string>
    <string name="notification_user_liked">%1$s liked post by %2$s</string>
    <string name="notification_user_new_post">%1$s published new post:</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="image_attachment">Image attachment</string>
</resources>